--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" 
-    "start":"node app.js"
+    "test":  "echo \"Error: no test specified\"&& exit 1",
+    "start": "node app.js"
   },
   "author": "aiswarya",
   "license": "ISC"
